[ADDED] added "NutsDescribable" to support a better Query Plan description